Delete unnecessary files and code, reorganized backup file, started building new jwt feature

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea
-.privatedoc/*
+.privatedoc/
 Backend/mariadb_repo_setup
 Backend/.gitplaceholder
 Frontend/.gitplaceholder
 .venv/
+backend/.config/
